[gd_scene load_steps=7 format=3 uid="uid://can6h8qgpptgj"]

[ext_resource type="Script" uid="uid://dxwtshumgngt0" path="res://Scenes/Game/Game.gd" id="1_y3kpf"]
[ext_resource type="LabelSettings" uid="uid://dwm3jiag4uexf" path="res://Resources/lable.tres" id="2_gwu2e"]
[ext_resource type="Texture2D" uid="uid://c6hjismxh4b8g" path="res://assets/ui/blue_button00.png" id="3_ln2h6"]
[ext_resource type="Texture2D" uid="uid://by5ftf4vj0h23" path="res://assets/ui/green_button00.png" id="4_y3kpf"]
[ext_resource type="PackedScene" uid="uid://bvdl2qrk3a0qp" path="res://Scenes/Scorer/Scorer.tscn" id="5_y3kpf"]
[ext_resource type="PackedScene" uid="uid://c28rulk1d1luw" path="res://Scenes/GameOverUi/GameOverUi.tscn" id="6_3k6gv"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3kpf")

[node name="HB" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileGrid" type="GridContainer" parent="HB"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 6

[node name="MC" type="MarginContainer" parent="HB"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HB/MC"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HB/MC/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Moves"
label_settings = ExtResource("2_gwu2e")

[node name="MovesLabel" type="Label" parent="HB/MC/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00"
label_settings = ExtResource("2_gwu2e")

[node name="HBoxContainer2" type="HBoxContainer" parent="HB/MC/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HB/MC/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pairs"
label_settings = ExtResource("2_gwu2e")

[node name="PairsLabel" type="Label" parent="HB/MC/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "10/10"
label_settings = ExtResource("2_gwu2e")

[node name="Control" type="Control" parent="HB/MC/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="HB/MC/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_ln2h6")
texture_pressed = ExtResource("4_y3kpf")

[node name="MovesLabel2" type="Label" parent="HB/MC/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("2_gwu2e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scorer" parent="." instance=ExtResource("5_y3kpf")]

[node name="Sound" type="AudioStreamPlayer" parent="."]

[node name="GameOverUi" parent="." instance=ExtResource("6_3k6gv")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HB/MC/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
